--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title> Projet webGL</title>
+        <link rel="stylesheet" href="style.css">
         <style>
         body { margin: 0; }
         canvas { width: 100%; height: 100% }
@@ -10,9 +11,11 @@
         </style>
     </head>
     <body>
+        
         <!-- API importe du site de Three.js -->
         <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 
+        
         <script type="importmap">
             {
                 "imports": {
@@ -23,11 +26,19 @@
         </script>
 
         <!-- Un titre centre -->
-        <h1 class="centre"> Projet webGL</h1>
-        <div id="webGL" class="centre"></div>
-        <!-- Mon script avec un chemin relatif -->
-        <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <script type="module" src="main.js"></script>
-        <p class="centre">  Projet webGL </p>
+        <div class="titre">
+            <h1  class="centre titre-principal"> Projet webGL</h1>
+            <div id="webGL" class="centre"></div>
+            <!-- Mon script avec un chemin relatif -->
+            <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+            <script type="module" src="main.js"></script>
+            <p  class="centre sous-titre">Nature Morte </p>
+        </div>
+        <div class="explication">
+            <div class="image-container">
+              <img src="naturemorte.jpg" alt="peinture" class="centre">
+            </div>
+            <p class="centre explication-texte">L'origine des natures mortes remonte à plusieurs siècles et trouve ses racines dans l'histoire de l'art. Ce genre artistique, également connu sous le nom de "nature morte" ou "still life" en anglais, a une longue tradition et une importance significative dans le domaine artistique.<br>Aujourd'hui, les natures mortes continuent d'être appréciées et utilisées par de nombreux artistes contemporains. Elles offrent un terrain fertile pour explorer la forme, la couleur, la texture et la symbolique. Elles nous invitent à observer attentivement notre environnement, à apprécier la beauté des objets simples et à méditer sur la nature éphémère de la vie.</p>
+          </div>
     </body>
 </html>
