--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         
         <!-- API importe du site de Three.js -->
         <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js"></script>
+
 
         
         <script type="importmap">
