--- a/index.html
+++ b/index.html
@@ -30,11 +30,16 @@
         <!-- Un titre centre -->
         <div class="titre">
             <h1  class="centre titre-principal"> Projet webGL</h1>
-            <div id="webGL" class="centre"></div>
+            
             <!-- Mon script avec un chemin relatif -->
             <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
             <script type="module" src="main.js"></script>
             <p  class="centre sous-titre">Nature Morte </p>
+        </div>
+        <div class="explication">
+            <div id="webGL" class="centre"></div>
+            <img src="naturemorte.jpg" alt="peinture" class="centre">
+
         </div>
         <div class="explication">
             <div class="image-container">
